--- a/src/docs/asciidoc/_classNames.adoc
+++ b/src/docs/asciidoc/_classNames.adoc
@@ -1,2 +1,16 @@
 :Term: org.lexis.vocabulary.terms.Term
 :EmptyTerm: org.lexis.vocabulary.terms.EmptyTerm
+:VocabularyWord: org.lexis.vocabulary.words.VocabularyWord
+:UserInput: org.lexis.vocabulary.words.userinput.UserInput
+:UserInput_short: UserInput
+:UserInputImpl: org.lexis.vocabulary.words.userinput.UserInputImpl
+:UserInputImpl_short: UserInputImpl
+:RegisteredDataKey: org.lexis.vocabulary.words.userinput.RegisteredDataKey
+:RegisteredDataKey_short: RegisteredDataKey
+:SwedishAdjectiveUserInput: org.lexis.languagemodule.swedish.userinput.SwedishAdjectiveUserInput
+:DefaultUserInput: org.lexis.vocabulary.words.userinput.DefaultUserInput
+:DefaultUserInput_short: DefaultUserInput
+:TermPropertyDelegate: org.lexis.vocabulary.words.userinput.TermPropertyDelegate
+:FlagPropertyDelegate: org.lexis.vocabulary.words.userinput.FlagPropertyDelegate
+:ConfigurationPropertyDelegate: org.lexis.vocabulary.words.userinput.ConfigurationPropertyDelegate
+:EnumConfigurationPropertyDelegate: org.lexis.vocabulary.words.userinput.EnumConfigurationPropertyDelegate
