Update user manual with renamed classes

--- a/src/docs/asciidoc/_classNames.adoc
+++ b/src/docs/asciidoc/_classNames.adoc
@@ -1,15 +1,15 @@
 :Term: org.lexis.vocabulary.terms.Term
 :EmptyTerm: org.lexis.vocabulary.terms.EmptyTerm
 :VocabularyWord: org.lexis.vocabulary.words.VocabularyWord
-:UserInput: org.lexis.vocabulary.words.userinput.UserInput
-:UserInput_short: UserInput
-:UserInputImpl: org.lexis.vocabulary.words.userinput.UserInputImpl
-:UserInputImpl_short: UserInputImpl
+:UserInputData: org.lexis.vocabulary.words.userinput.UserInputData
+:UserInputData_short: UserInputData
+:UserInputDataImpl: org.lexis.vocabulary.words.userinput.UserInputDataImpl
+:UserInputDataImpl_short: UserInputDataImpl
 :RegisteredDataKey: org.lexis.vocabulary.words.userinput.RegisteredDataKey
 :RegisteredDataKey_short: RegisteredDataKey
 :SwedishAdjectiveUserInput: org.lexis.languagemodule.swedish.userinput.SwedishAdjectiveUserInput
-:DefaultUserInput: org.lexis.vocabulary.words.userinput.DefaultUserInput
-:DefaultUserInput_short: DefaultUserInput
+:DefaultUserInputImpl: org.lexis.vocabulary.words.userinput.DefaultUserInputImpl
+:DefaultUserInputImpl_short: DefaultUserInputImpl
 :TermPropertyDelegate: org.lexis.vocabulary.words.userinput.TermPropertyDelegate
 :FlagPropertyDelegate: org.lexis.vocabulary.words.userinput.FlagPropertyDelegate
 :ConfigurationPropertyDelegate: org.lexis.vocabulary.words.userinput.ConfigurationPropertyDelegate
